---
source: src/pattern/tests.rs
expression: "parse(\"//=,//#\",\n    r#\"\n    //= https://example.com/spec.txt\n    //= type=exception\n    //= reason=This isn't possible currently\n    //# Here is my citation\n    \"#)"
---
Ok(
    [
        Annotation {
            source: "file.rs",
            anno_line: 2,
            anno_column: 7,
            item_line: 6,
            item_column: 0,
            path: "",
            anno: Exception,
            target: "https://example.com/spec.txt",
            quote: "Here is my citation",
            comment: "This isn't possible currently",
            manifest_dir: "/",
            level: Auto,
            format: Auto,
            tracking_issue: "",
            feature: "",
            tags: {},
        },
    ],
)
